Lower grid row numbers to fix loading on safari

--- a/public/style.scss
+++ b/public/style.scss
@@ -1,10 +1,11 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap");
-$first-section-of-content-on-old-minisites: "#chabad_left_colum > :nth-child(1)";
-$hero-image-container-level-one-on-old-minisites: ".chabad_image_banner";
-$hero-image-container-level-two-on-old-minisites: ".chabad_image_content";
-$hero-text-wrapper-on-old-minisites: "#chabad_banner_text";
-$hero-bottom-border-on-old-minisites: "#content_banner::after";
+/* hero image container level one on old minisites ".chabad_image_banner" */
+/* hero image container level two on old minisites ".chabad_image_content" */
+/* hero text wrapper on old minisites "#chabad_banner_text" */
+/* hero bottom border on old minisites "#content_banner::after" */
+
 /* page tools seem to stay even if you choose to hide them so here they get set to stay hidden always */
 .page-tools-sidebar {
 	display: none;
@@ -195,7 +196,7 @@ body.noselect {
 		text-wrap: pretty;
 	}
 }
-#chabad_main_content :has(#{$hero-image-container-level-one-on-old-minisites}, img[src$="White-wavy-bottom-border.png"], #co_body_container, #chabad_right_colum, #chabad_left_colum, header.article-header, footer),
+#chabad_main_content :has(.chabad_image_banner, img[src$="White-wavy-bottom-border.png"], #co_body_container, #chabad_right_colum, #chabad_left_colum, header.article-header, footer),
 #chabad_main_content :is(footer, #chabad_right_colum, #chabad_left_colum),
 .section_root #chabad_main_content :has(.content-area-parent),
 .section_root #chabad_main_content .content-area-parent {
@@ -209,18 +210,18 @@ body.noselect {
 @supports (grid-template-rows: subgrid) {
 	#chabad_main_content :has(#content_banner, #PreschoolSection1, #co_body_container) {
 		// Content areas should fill the entire height of the page
-		grid-row: 1/99;
+		grid-row: 1/20;
 	}
 	.section_root #chabad_main_content :has(.content-area-parent),
 	.section_root #chabad_main_content .content-area-parent {
 		// Content areas should fill the entire height of the page
-		grid-row: 1/99;
+		grid-row: 1/20;
 	}
 }
 #chabad_main_content :has(#chabad_left_colum),
 #chabad_left_colum {
 	&:not(:has(#content_banner:first-child)) {
-		grid-row: 2/99;
+		grid-row: 2/20;
 	}
 }
 .section_root #chabad_main_content:not(:has(#content_banner:first-child, #PreschoolSection1Image)) #chabad_head {
@@ -250,9 +251,10 @@ header.article-header {
 		margin-bottom: 0;
 	}
 }
-#{$first-section-of-content-on-old-minisites},
-#{$hero-image-container-level-one-on-old-minisites},
-#{$hero-image-container-level-two-on-old-minisites},
+/* Old minisites spell it chabad_left_colum instead of chabad_left_column */
+#chabad_left_colum > :nth-child(1),
+.chabad_image_banner,
+.chabad_image_content,
 #PreschoolSection1,
 #PreschoolSection1Image {
 	@supports (grid-template-rows: subgrid) {
@@ -260,7 +262,7 @@ header.article-header {
 	}
 	grid-row: 1/4;
 }
-#{$hero-text-wrapper-on-old-minisites},
+#chabad_banner_text,
 #PreschoolSection1Text {
 	@supports (grid-template-rows: subgrid) {
 		grid-column: content;
@@ -277,7 +279,7 @@ header.article-header {
 	place-self: center;
 	margin-block: 50px;
 }
-#{$hero-bottom-border-on-old-minisites},
+#content_banner::after,
 img[src$="White-wavy-bottom-border.png"] {
 	@supports (grid-template-rows: subgrid) {
 		grid-column: full-width;
@@ -1330,7 +1332,7 @@ div[name="co_section"][real_id^="column_promo"] {
 body:not(.mobile) #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) #chabad_head .chabad_logo {
 	color: white;
 }
-#{$hero-image-container-level-one-on-old-minisites} {
+.chabad_image_banner {
 	min-height: 500px;
 	max-height: max(30vmax, 800px) !important;
 }
@@ -1374,7 +1376,7 @@ body.mobile #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) div#ch
 	div#chabad_body_content {
 		width: 100%;
 	}
-	#{$hero-image-container-level-one-on-old-minisites} img {
+	.chabad_image_banner img {
 		object-fit: cover;
 		height: 100%;
 		width: 100%;
@@ -1444,16 +1446,16 @@ body.mobile #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) div#ch
 		float: none;
 	}
 	img[src*="preschool_banner_image.jpg"],
-	#{$hero-image-container-level-one-on-old-minisites}:not(:has(img)) {
+	.chabad_image_banner:not(:has(img)) {
 		content: url(https://mendelgordon.github.io/images/Shluchim/minisites/themes/preschool2/photos/PreschoolStockBackground.jpg);
 		object-fit: cover;
 	}
-	#{$hero-image-container-level-one-on-old-minisites}:not(:has(img)) {
+	.chabad_image_banner:not(:has(img)) {
 		height: 100%;
 		width: 100%;
 		filter: brightness(0.5);
 	}
-	#{$hero-image-container-level-one-on-old-minisites} {
+	.chabad_image_banner {
 		background-color: #12b0d1;
 	}
 	:is(.chabad_box_content_body, .content_box_custom, #chabad_right_colum > :is(#chabad_updates, #co_photo_gallery, #co_calendar, #co_section, #chabad_box_text):not(:empty)) {
@@ -1567,7 +1569,7 @@ body.mobile #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) div#ch
 		font-size: inherit;
 	}
 	#chabad_right_colum {
-		grid-row: 100;
+		grid-row: 21;
 		grid-template-rows: auto;
 	}
 }
